--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -109,34 +109,35 @@
       -->
     </div>
     <div class="content">
-        <ul class="flex-container">
-            <div class="no-event-found">
-              <p class="msg"></p>
+        <ul class="flex-container flex-container-events">          
+          <% @events.each do |event| %>
+          <li class="flex-item">
+            <div class="img-event">
+              <div class="wrapperB" style="background-image: url('<%= event.picture %>');"></div>
             </div>
-          
-            <% @events.each do |event| %>
-            <li class="flex-item">
-                <div class="img-event">
-                  <div class="wrapperB" style="background-image: url('<%= event.picture %>');"></div>
-                </div>
-                <div class="content-event">
-                    <p class="title-event multiline-ellipsis"><%= link_to(event.title, event, :class => "link link-title") %></p>
+            <div class="content-event">
+              <p class="title-event multiline-ellipsis"><%= link_to(event.title, event, :class => "link link-title") %></p>
 
-                  <p class="date-event">From <%= event.start_time.strftime("%d %B %Y") %> to <%= event.end_time.strftime("%d %B %Y") %></p>
-                    <p class="multiline-ellipsis">
-                      <%= event.description %>
-                    </p>
-                  <a class="" href="/events/<%= event.id %>">
-                    <div class="more-event">
-                      
-                        <button class="btn" href="#">More</button>
-                      
-                    </div>
-                    </a>
+              <p class="date-event">From <%= event.start_time.strftime("%d %B %Y") %> to <%= event.end_time.strftime("%d %B %Y") %></p>
+              <p class="multiline-ellipsis">
+                <%= event.description %>
+              </p>
+              <a class="" href="/events/<%= event.id %>">
+                <div class="more-event">
+
+                  <button class="btn" href="#">More</button>
+
                 </div>
-            </li>
-            <% end %>
-        </ul>
+              </a>
+            </div>
+          </li>
+          <% end %>
+      </ul>
+      <ul class="flex-container flex-container-error">          
+        <li class="flex-item"<%== ' style="display: none;"' if @events.length > 0 %>>
+          There is unfortunately no more events for these search filters
+        </li>
+      </ul>
     </div>
 </section>
 </section>
