--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -65,6 +65,7 @@ footer {
     background-color: #2c3e50;
     padding: 5px;
     color: white;
+    padding-top:10px;
 }
 
 .header-content {
@@ -694,10 +695,11 @@ input[type=checkbox].categorie:checked + label:after {
     display: inline-block;
 }
 
-.site-title{
+.site-title a{
     font-size: 2.5em;
     overflow:auto;
-
+    color:white;
+    text-decoration:none;
 }
 
 .ui-datepicker {
