--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -86,8 +86,8 @@ section.main .left .search {
     padding: 5px;
     margin-left: 10px;
     margin-bottom: 10px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    /*padding-top: 20px;*/
+    /*padding-bottom: 20px;*/
 }
 
 .image-cover-div {
