--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -100,12 +100,9 @@
     <div class="search">
         <div class="search-div">
             <label class="se-placeholder">
-                <i class="icon-search icon-input-text"></i>
                 <input type="text" placeholder="Search" class="search-input" id="input-event-title" />
-                <span>Search</span>
             </label>
-            <button class="btn" href="#" id="button-event-title"> Search</button>
-
+            <a class="btn" href="#" id="button-event-title" style="text-decoration:none"> <i class="icon-search"></i></a>
         </div>
       <!--
         <div class="grid-or-list">
@@ -115,35 +112,34 @@
       -->
     </div>
     <div class="content">
-        <ul class="flex-container flex-container-events">          
-          <% @events.each do |event| %>
-          <li class="flex-item">
-            <div class="img-event">
-              <div class="wrapperB" style="background-image: url('<%= event.picture %>');"></div>
+        <ul class="flex-container">
+            <div class="no-event-found">
+              <p class="msg"></p>
             </div>
-            <div class="content-event">
-              <p class="title-event multiline-ellipsis"><%= link_to(event.title, event, :class => "link link-title") %></p>
-
-              <p class="date-event">From <%= event.start_time.strftime("%d %B %Y") %> to <%= event.end_time.strftime("%d %B %Y") %></p>
-              <p class="multiline-ellipsis">
-                <%= event.description %>
-              </p>
-              <a class="" href="/events/<%= event.id %>">
-                <div class="more-event">
-
-                  <button class="btn" href="#">More</button>
-
+          
+            <% @events.each do |event| %>
+            <li class="flex-item">
+                <div class="img-event">
+                  <div class="wrapperB" style="background-image: url('<%= event.picture %>');"></div>
                 </div>
-              </a>
-            </div>
-          </li>
-          <% end %>
-      </ul>
-      <ul class="flex-container flex-container-error">          
-        <li class="flex-item"<%== ' style="display: none;"' if @events.length > 0 %>>
-          There is unfortunately no more events for these search filters
-        </li>
-      </ul>
+                <div class="content-event">
+                    <p class="title-event multiline-ellipsis"><%= link_to(event.title, event, :class => "link link-title") %></p>
+
+                  <p class="date-event">From <%= event.start_time.strftime("%d %B %Y") %> to <%= event.end_time.strftime("%d %B %Y") %></p>
+                    <p class="multiline-ellipsis">
+                      <%= event.description %>
+                    </p>
+                  <a class="" href="/events/<%= event.id %>">
+                    <div class="more-event">
+                      
+                        <button class="btn" href="#">More</button>
+                      
+                    </div>
+                    </a>
+                </div>
+            </li>
+            <% end %>
+        </ul>
     </div>
 </section>
 </section>
