--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,7 @@
   
   <script src="//code.jquery.com/ui/1.11.3/jquery-ui.js"></script>
 </head>
-<body>
-  <p id="fetching" style="display: <%= @user_is_fetching ? 'block' : 'none' %>">Fetching</p>
- 
-  <!--<%= link_to "Liste des users", users_path %>-->
-  
+<body>   
   <!-- INTEGRATION -->
   
   <header>
@@ -42,6 +38,9 @@
     <% end %>
     <% if user_signed_in? %>
         <div class="btn-user">
+          <!-- BEGIN FETCHING -->
+          <span class="fetching" style="display: <%= @user_is_fetching ? 'inline' : 'none' %>">Fetching</span>
+          <!-- END FETCHING -->
           <%= button_to "Profil", user_path(current_user), :class => "btn", :method => :get %>
           <%= button_to "Utilisateurs", users_path, :class => "btn", :method => :get %>
           <%= button_to "Sign out", destroy_user_session_path, :class => "btn", :method => :delete %>
