--- a/app/assets/stylesheets/events_se.css
+++ b/app/assets/stylesheets/events_se.css
@@ -34,7 +34,6 @@
     color: #111111;
     border:solid #bdc3c7 1px;
     margin-bottom: 1em;
-    max-height:12em;
 }
 
 
@@ -110,14 +109,14 @@
     height: 100%;
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 5;
+    -webkit-line-clamp: 3;
     text-overflow: -o-ellipsis-lastline;
     margin-left: 0.5em;
 }
 
 
 .more-event{
-    float: right;
+    float: left;
     padding-top: 0.3em;
 }
 
