--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -89,7 +89,7 @@ footer {
 section.main .left .search {
     background-color: #DBD2D7;
     padding: 5px;
-    margin-left: 10px;
+    margin-left: 2px;
     margin-bottom: 10px;
     /*padding-top: 20px;*/
     /*padding-bottom: 20px;*/
@@ -165,7 +165,7 @@ h3.title-user-list{
 /*-----------------------------------------------------------------------------*/
 
 input[type=text], .btn {
-    padding: 10px;
+    padding: 8px;
 }
 
 input, select, .btn {
@@ -212,8 +212,9 @@ input[type=text] {
     transition: all 100ms linear;
 }
 
-.search-input{
-
+.btn-small {
+  text-decoration: none;
+  min-width: initial;
 }
 
 /*INPUT TEXT*/
@@ -221,6 +222,10 @@ input[type="text"]:focus {
     background: rgba(255, 255, 255, 0.5);
     box-shadow: inset 0 -1px 0 #42a9ec;
 
+}
+
+.search-input{
+  
 }
 
 /*PLACHOLDER*/
