--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -102,7 +102,8 @@
             <label class="se-placeholder">
                 <input type="text" placeholder="Search" class="search-input" id="input-event-title" />
             </label>
-            <a class="btn" href="#" id="button-event-title" style="text-decoration:none"> <i class="icon-search"></i></a>
+            <a class="btn btn-small" href="#" id="button-event-title"> <i class="icon-search"></i></a>
+            <a class="btn btn-small" href="#" id="button-event-refresh"> <i class="icon-refresh"></i></a>
         </div>
       <!--
         <div class="grid-or-list">
