--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,10 +2,10 @@
 <div class="image-cover-div">
   
   <% if not @event_cover.nil? %>
-      <a href="<%= @event_cover.id_facebook %>">
-        <%= link_to(image_tag( @event_cover.picture , :alt => @event_cover.title ,:class => "img-cover"), @event_cover)%>
-      </a>
+  <%= image_tag(@event_cover.picture , :alt => @event_cover.title ,:class => "img-cover") %>
   <% end %>
+
+  <%= link_to(@event_cover.title, @event_cover, :class => 'link link-title title-event flex-item cover-overlay') %>
 </div>
 <section class="main">
 <nav class="nav-bar">
