--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,15 @@
     <p>
       <button id="import">Fetch my events</button> 
       <span class="fetching" style="display: <%= @user_is_fetching ? 'inline' : 'none' %>">A fetching is already occuring</span>
+      <% if @user_is_fetching %>
+        <div class="fetching-flag underway"></div>
+      <% else %>
+        <% if @user.contributions_counter > 0 %>
+          <div class="fetching-flag done"></div>
+        <% else %>
+          <div class="fetching-flag not-done"></div>
+        <% end %>
+      <% end %>
     </p>
     <% end %>
 
