--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -75,12 +75,12 @@
   
   
     <!-- DEBUT DU TOP CONTRIBUTOR TITRE -->
-    <div class="nav-bar-title">
+    <div class="nav-bar-title hide">
       <p>Top contributors</p>
     </div>
     <!-- FIN DU TOP CONTRIBUTOR TITRE -->
     <!-- DEBUT DU TOP CONTRIBUTOR CONTENT -->
-    <div class="nav-bar-content">
+    <div class="nav-bar-content hide">
       <div class="top-contributor cat-queries-480">
           <% @users_top.each do |user| %>
           <div>
