Add first login popup message

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,22 +20,32 @@
 </head>
 <body>   
   <!-- INTEGRATION -->
-  
+    
   <header>
     <div class="header-content-margin">
-        <% if alert!=nil %>  
+    <% if alert!=nil %>  
       <div class="notify notify error alert" role="alert">  
         <%= alert %>
         <button type="button" class="notify-close">&times;</button>
       </div>
     <% end %>
-  
+      
+    <% if flash_first_login != nil %>  
+      <div id="flash-first-login" title="First login with Facebook">
+        <p>This is your first login with Facebook on Social Events.</p>
+        <p>By going to <%= link_to("your profile", current_user) %>, you can import events from Facebook near your current location.</p>
+        <p>When importing them on Social Events, you accept to link them to your account and make them public</p>
+      </div>
+    <% end %>
+
+      
     <% if notice!=nil %>  
       <div class="notify notify warning notice" role="alert">  
         <%= notice %>
         <button type="button" class="notify-close">&times;</button>
       </div>
     <% end %>
+    
     <% if user_signed_in? %>
         <div class="btn-user">
           <!-- BEGIN FETCHING -->
