--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,9 +4,14 @@
   <%= raw javascript_include_view_js %>
 <% end %>
 
-<div class="image-cover-div">
-  <%= image_tag(@event.picture, :alt => "cover image" ,:class => "img-cover") %>
+<div id="dialog-cover" title="<%= @event.title %>" style="display: none;">
+  <%= image_tag(@event.picture, :alt => @event.title) %>
 </div>
+
+<div id="dialog-cover-opener" class="image-cover-div pointer" title="<%= @event.title %>">
+  <%= image_tag(@event.picture, :alt => @event.title ,:class => "img-cover") %>
+</div>
+
 <section class="show">
   <div class="show-body">
     <div class="show-title">
